# steamSearch

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  bootstrap.py  main.py
app/buff/: __init__.py  client.py  dto.py  service.py
app/core/: config.py  constants.py  errors.py  logger.py  rate_limiter.py  security.py
app/market/: __init__.py  calculator.py  models.py  scanner.py
app/plugins/: __init__.py
app/plugins/notify/: __init__.py
app/steamdt/: __init__.py  client.py  dto.py  service.py
app/storage/: db.py  migrations.py  models.py
app/storage/repositories/: items.py  prices.py  watchlist.py
app/ui/: __init__.py  web_server.py
app/ui/pages/: browser.py
config/: config.example.toml
docs/: project-start-plan.md  technical-design.md
prototype/: index.html
scripts/: start.sh  status.sh  stop.sh
tests/: test_buff_client.py  test_buff_service.py  test_calculator.py  test_config.py  test_item_repository.py  test_price_repository.py  test_rate_limiter.py  test_scanner.py  test_steamdt_client.py  test_steamdt_service.py  test_watchlist_repository.py  test_web_server.py
