[project]
name = "steamsearch"
version = "0.1.0"
description = "A CS2 skin price query and opportunity scanner for SteamDT and BUFF data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "flet",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "apscheduler",
  "loguru",
  "platformdirs",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]

